--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "vader-sentiment",
   "version": "1.0.0",
   "description": "javascript port of vader sentiment tool",
-  "main": "src/index.js",
+  "main": "build/vaderSentiment.bundle.js",
   "scripts": {
-    "tests": "tape tests/**/*.js | faucet",
-    "prettier": "prettier --print-width 100 --no-bracket-spacing --tab-width 2 --single-quote --write 'src/**/*.js' 'tests/**/*.js'"
+    "tests": "babel-tape-runner tests/**/*.js | faucet",
+    "prettier": "prettier --print-width 100 --no-bracket-spacing --tab-width 2 --single-quote --write 'src/**/*.js' 'tests/**/*.js'",
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
@@ -26,8 +27,15 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-tape-runner": "^2.0.1",
     "faucet": "^0.0.1",
+    "prettier": "^1.9.2",
     "tape": "^4.8.0",
-    "prettier": "^1.9.2"
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14"
   }
 }
